kubernetes/infrastructures/prometheus-operator/overlays/k3d/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: default
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - grafana.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-operator-system-kube-prometheus-stack-grafana
          namespace: prometheus-operator-system
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: default
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - prometheus.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-operator-system-prometheus
          namespace: prometheus-operator-system
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: default
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - alertmanager.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-operator-system-alertmanager
          namespace: prometheus-operator-system
          port: 9093
